[package]
name = "ailene"
version = "0.1.0"
edition = "2021"
authors = ["stackablecode-bot <noreply@users.noreply.github.com>"]
description = "Ailene — minimal Cargo manifest with nescacarry and common helpers"
license = "MIT"
repository = "https://github.com/stackablecode-bot/Ailene"

[dependencies]
# Flexible caret constraint for nescacarry so compatible newer patch/minor versions are accepted
nescacarry = "^0.1"

# Useful async runtime often required by modern crates
tokio = { version = "1", features = ["full"] }

# Serialization helpers, commonly used together with other crates
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Lightweight logger for tests/dev runs
pretty_env_logger = "0.4"

[[bin]]
name = "Ailene"
path = "src/main.rs"